--- a/connect/register/templates/register/sign_up.html
+++ b/connect/register/templates/register/sign_up.html
@@ -13,9 +13,8 @@
 
         <section class="middle">
             <!--<user-name></user-name>-->
-            <input type="text">
-            <p>password</p>
-            <input type="password" name="" id="">
+           name <input type="text" name={{person_name}}>
+           password <input type="password" name={{person_password}} id="">
             <button type="submit">submit</button>
         </section>
 
