--- a/connect/register/templates/register/sign_up.html
+++ b/connect/register/templates/register/sign_up.html
@@ -13,9 +13,13 @@
 
         <section class="middle">
             <!--<user-name></user-name>-->
-           name <input type="text" name={{person_name}}>
-           password <input type="password" name={{person_password}} id="">
-            <button type="submit">submit</button>
+            <form action="" method="post">
+               
+                name <input type="text" name={{person_name}}>
+                password <input type="password" name={{person_password}} id="">
+                <button type="button" class="btn btn-success">Success</button>
+            </form>
+          
         </section>
 
 
